apps/pgadmin/base/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    serviceAccountName: pgadmin-sa
    spec:
      hostname: pgadmin
      subdomain: pgadmin
      containers:
      - image: quay.io/sticen/pgadmin4:latest
        name: pgadmin4
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
