apps/pgadmin/base/knativeservice.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: pgadmin
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "2"
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.11.0
          env:
#            # Knative expects the container to listen on $PORT (default 8080)
#            - name: PORT
#              value: "8080"
            # pgAdmin listen config
            - name: PGADMIN_LISTEN_ADDRESS
              value: "0.0.0.0"
            - name: PGADMIN_LISTEN_PORT
              value: "8080"
            # Sensitive values from Secret
            - name: PGADMIN_DEFAULT_EMAIL
              valueFrom:
                secretKeyRef:
                  name: pgadmin-credentials
                  key: PGADMIN_DEFAULT_EMAIL
            - name: PGADMIN_DEFAULT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: pgadmin-credentials
                  key: PGADMIN_DEFAULT_PASSWORD
          ports:
            - name: http1
              containerPort: 8080
