apps/pgadmin/base/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
  - name: http
    port: 5050
    targetPort: 5050
