apps/pgadmin/base/pgadmin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: pgadmin
    weight: 100
  wildcardPolicy: None
